--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -4,15 +4,56 @@
 }
 html, body, #root {
   height: 100%;
-  margin: 0
+  margin: 0;
+  font-family: "Bahnschrift", sans-serif;
 }
-.abs {
-  position: absolute;
-  z-index: 1;
+
+.Configuration {
+  position:absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  margin: 2rem;
+  padding: 2rem;
+  border-radius: 2rem;
+  border: 4px solid lightgray;
 }
-.dataObj {
-  position: absolute;
-  top:0;
-  margin: 50px;
-  color: white;
+
+input, select{
+  border-radius: 0.5rem;
+  padding: 0.25rem;
+}
+
+select {
+  width: 200px
+}
+
+.confForm {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.confRow {
+  display: flex;
+  justify-content: space-between;
+}
+
+label {
+  font-size: 1.5rem;
+  margin-right: 1rem;
+}
+
+button{
+  border-radius: 0.5rem;
+  border: 1px solid black;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  transition: margin-left 0.2s;
+  margin-top: 0.5rem;
+}
+button.toggled{ 
+  margin-left: 75%;
+}
+button:hover{
+  background-color: lightgray;
 }
